...

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="Confirm"
        android:id="@+id/confirm_button"
        android:textColor="#FFFFFF"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/edit_button"
        android:layout_toEndOf="@+id/edit_button"
        android:layout_marginLeft="14dp"
        android:layout_marginStart="14dp"
...
