<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:background="#ffffffff"
        android:nestedScrollingEnabled="false">

        <TableRow android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:gravity="top">

            <EditText
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="Search..."
                android:textColorHint="@color/colorPrimary"
                android:textColor="@color/colorPrimary"
                android:ems="20"
                android:id="@+id/EditTextId"
                android:layout_weight="0.31"
                android:enabled="true"
                android:visibility="visible" />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radius_spinner"
                android:layout_column="2"
                android:spinnerMode="dropdown"
                android:layout_gravity="top" />

            <Button
                android:id="@+id/Search"
                android:layout_height="wrap_content"
                android:text="@string/Search"
                android:onClick="search"
                android:layout_width="fill_parent">
            </Button>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <ListView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/main_listings"
                android:layout_weight="1" />
        </TableRow>

        <TableRow>
            <com.facebook.login.widget.LoginButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:id="@id/login_button"
                android:visibility="gone" />



        </TableRow>


    </TableLayout>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageButton"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="376dp"
        android:layout_marginStart="376dp"
        android:layout_marginTop="182dp" />

</RelativeLayout>