<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/full_listing_linear_layout"
    android:background="#4A5DB4">


    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:isScrollContainer="true">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/full_listing_relative_layout"
            android:background="#4A5DB4">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="TITLE"
                android:id="@+id/itemTitle"
                android:layout_marginTop="50dp"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp"
                android:layout_centerHorizontal="true"
                android:textColor="#FFFFFF"
                android:textSize="25dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="PRICE"
                android:layout_below="@id/itemTitle"
                android:layout_marginTop="20dp"
                android:id="@+id/itemPrice"
                android:paddingRight="30dp"
                android:layout_alignParentRight="true"
                android:textColor="#FFFFFF"
                android:textSize="15dp"
                android:textStyle="bold" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Description"
                android:paddingLeft="30dp"
                android:layout_marginTop="20dp"
                android:layout_below="@id/itemPrice"
                android:layout_centerHorizontal="true"
                android:id="@+id/itemDescription"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:textSize="15dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Categories"
                android:layout_below="@id/itemDescription"
                android:paddingLeft="30dp"
                android:layout_marginTop="20dp"
                android:id="@+id/itemCategories"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:textSize="15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Location"
                android:layout_below="@id/itemCategories"
                android:paddingLeft="30dp"
                android:layout_marginTop="20dp"
                android:id="@+id/itemLocation"
                android:textColor="#FFFFFF"
                android:textSize="15dp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:id="@+id/photo_display"
                android:layout_below="@id/itemLocation"
                android:layout_marginTop="20dp"
                android:layout_centerHorizontal="true" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Offer!"
                android:id="@+id/makeOfferButton"
                android:layout_below="@+id/photo_display"
                android:textColor="#000000"
                android:layout_toRightOf="@+id/delete_item_text_view"
                />

            <!--<Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Add To WatchList!"
                android:id="@+id/AddToWatchListButton"
                android:layout_alignBaseline="@id/itemTitle"
                android:layout_alignParentRight="true"
                android:paddingRight="10dp"
                />-->

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="Make your offer"
                android:visibility="gone"
                android:paddingLeft="20dp"
                android:inputType="numberDecimal"
                android:id="@+id/offerTextView"
                android:layout_alignBaseline="@id/makeOfferButton"
                android:layout_toRightOf="@id/makeOfferButton"
                />
            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Submit Offer"
                android:visibility="gone"
                android:paddingLeft="20dp"
                android:id="@+id/offer_submit_button"
                android:layout_alignBaseline="@id/offerTextView"
                android:layout_toRightOf="@id/offerTextView"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Delete Item"
                android:visibility="gone"
                android:textColor="#FF0000"
                android:id="@+id/delete_item_text_view" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Mark As Sold"
                android:layout_alignBaseline="@id/delete_item_text_view"
                android:layout_alignParentRight="true"
                android:visibility="gone"
                android:textColor="#0000FF"
                android:id="@+id/mark_sold_text_view" />

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="      Watchlist  "
                android:id="@+id/watchListSwitch"
                android:layout_alignBaseline="@id/itemPrice"
                android:layout_alignParentLeft="true"
                android:paddingLeft="10dp"
                android:checked="false"
                android:textColor="#FFFFFF"
                android:textSize="15dp"
                android:textStyle="bold" />


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/image_stamp"
                android:layout_centerVertical="true"
                android:visibility="gone"
                android:layout_centerHorizontal="true"/>

        </RelativeLayout>
    </ScrollView>


</RelativeLayout>